first commit of the full portfolio website

--- a/index.html
+++ b/index.html
@@ -19,8 +19,6 @@
 <!-- HEADER -->
     <header>
       <div class="full-width">
-
-        <div class=full-width>
           <nav>
             <ul>
               <li><a href="#work">Work</a></li>
@@ -28,46 +26,42 @@
               <li><a href="#contact">Contact</a></li>
             </ul>
           </nav>
-        </div>
-
-
-        <div id="greeting" class=full-width>
+        <div id="greeting">
           <h1>Hi you! <span>Jana</span> here.</h1>
           <h2>I'm a web developer, designer,<br>  creative thinker and problem solver, based in Riga, Latvia.</h2>
         </div>
-
       </div>
     </header>
 
 <!-- MAIN -->
 
 <!---work -->
-      <section id="work" class="full-width">
+      <section id="work">
         <div class="full-width">
           <h2>My Portfolio</h2>
-        </div>
 
         <!-- First -->
-        <div id="first-project">
-          <div class="half-width" class="project-picture">
-            <img src="img/jubilee-thumbail.png" alt="jubilee thumbail photo" />
-          </div>
-          <div class="half-width" class="project-description">
-            <h3></h3>
-            <h4></h4>
-            <p></p>
-          </div>
+          <div id="first-project">
+            <div class="half-width" class="project-picture">
+              <img src="img/jubilee-thumbail.png" alt="jubilee thumbail photo" />
+            </div>
+            <div class="half-width" class="project- description">
+                <h3>Jubilee Austen</h3>
+                <h4>HTML5 & CSS Website</h4>
+                <p>The final project in Phase 1 of Skillcrush “Break Into Tech” course. The task was to recreate a portfolio website for a web developer, using a Photoshop Design Comp. The aim of this project was to get familiar with Photoshop and learn about HTML and CSS.</p>
+
+            </div>
         </div>
 
         <!-- Second -->
-        <div id="second-project" >
+        <div id="second-project">
           <div class="half-width" class="project-picture">
             <img src="img/rogue-pickings-thumbnail.png" alt="rogue pickings thumbail photo" />
           </div>
           <div class="half-width" class="project-description">
-            <h3></h3>
-            <h4></h4>
-            <p></p>
+            <h3>Rogue Pickings</h3>
+            <h4>HTML & CSS from Photoshop Design Comp</h4>
+            <p>The second project of the Skillcrush course. Designed a multi-page website with HTML and CSS all by myself, using Photoshop Design Comp.</p>
           </div>
         </div>
       </section>
@@ -75,45 +69,43 @@
 <!-- About me -->
       <section id="about" >
         <div class="full-width">
-          <div class="full-width">
-            <h2>About me</h2>
-          </div>
+          <h2>About me</h2>
           <div class="half-width">
             <img src="img/about-me-picture.jpg" />
           </div>
           <div class="half-width">
-            <h3></h3>
-            <p></p>
+            <h3>I'm passionate about tech and art!</h3>
+            <p>My name is Jana (but you actually should say Yana). I'm a Skillcrush student, a tecky in a making. I'm a problem solver and love logical riddles, which is basically my job as a developer. <br>I'm actually coming from an art background - I have a Bachelor's degree in Art History and Theory, so if you also want to talk art -let's! What can be better than mixing different fields of knowledge.</p>
           </div>
         </div>
       </section>
 
 <!-- footer -->
-      <footer id="contact" class="full-width">
+      <footer id="contact">
         <div class="full-width">
           <h2>Let's Connect</h2>
-        </div>
+
         <div id="hire" class="third-width">
           <h3>Hire me</h3>
-          <p></p>
-          <p></p>
+          <p>000000000000</p>
+          <a href="mailto:jana@jjakobs.com">jana@jjakobs.com</a>
         </div>
         <div id="connect" class="third-width">
           <h3>Follow me</h3>
-          <!-- icons -->
-          <!-- icons -->
-          <!-- icons -->
+          <ul>
+            <li><a href="https://www.facebook.com/jakobs.jana"><img src="img/facebook.png" alt="facebook icon" /></a></li>
+            <li><a href="https://github.com/Jana993"><img src="img/github.png" alt="github icon" /></a></li>
+            <li><a href="https://www.linkedin.com/in/jjakobs/"><img src="img/linkedin.png" alt="linkedin icon" /></a></li>
+          </ul>
         </div>
+
         <div id="meet" class="third-width">
           <h3>Meet Me</h3>
-          <p></p>
+          <p>Riga, Latvia</p>
         </div>
         <div id="copyright" class="full-width">
           <p>Copyright 2019 Jana Jakobs</p>
         </div>
       </footer>
-
-
     </body>
-
 </html>
