--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
 
       <link rel="stylesheet" type="text/css" href="css/normalize.css">
 
-      <link href="https://fonts.googleapis.com/css?family=Libre+Baskerville:400,400i,700|Merriweather:300,400,700&display=swap" rel="stylesheet">
       <link href="https://fonts.googleapis.com/css?family=Sacramento&display=swap" rel="stylesheet">
+      <link href="https://fonts.googleapis.com/css?family=Libre+Baskerville:400,400i,700&display=swap" rel="stylesheet">
+      <link href="https://fonts.googleapis.com/css?family=Merriweather:300,300i,400,700&display=swap" rel="stylesheet">
 
     </head>
 
@@ -42,10 +43,10 @@
 
         <!-- First -->
           <div id="first-project">
-            <div class="half-width" class="project-picture">
+            <div class="half-width">
               <img src="img/jubilee-thumbail.png" alt="jubilee thumbail photo" />
             </div>
-            <div class="half-width" class="project- description">
+            <div class="half-width">
                 <h3>Jubilee Austen</h3>
                 <h4>HTML5 & CSS Website</h4>
                 <p>The final project in Phase 1 of Skillcrush “Break Into Tech” course. The task was to recreate a portfolio website for a web developer, using a Photoshop Design Comp. The aim of this project was to get familiar with Photoshop and learn about HTML and CSS.</p>
@@ -55,23 +56,25 @@
 
         <!-- Second -->
         <div id="second-project">
-          <div class="half-width" class="project-picture">
+          <div class="half-width">
             <img src="img/rogue-pickings-thumbnail.png" alt="rogue pickings thumbail photo" />
           </div>
-          <div class="half-width" class="project-description">
+          <div class="half-width">
             <h3>Rogue Pickings</h3>
             <h4>HTML & CSS from Photoshop Design Comp</h4>
             <p>The second project of the Skillcrush course. Designed a multi-page website with HTML and CSS all by myself, using Photoshop Design Comp.</p>
           </div>
         </div>
+      </div>
       </section>
+
 
 <!-- About me -->
       <section id="about" >
         <div class="full-width">
           <h2>About me</h2>
           <div class="half-width">
-            <img src="img/about-me-picture.jpg" />
+            <img src="img/about-me-picture.jpg" alt="about me photo"/>
           </div>
           <div class="half-width">
             <h3>I'm passionate about tech and art!</h3>
@@ -106,6 +109,7 @@
         <div id="copyright" class="full-width">
           <p>Copyright 2019 Jana Jakobs</p>
         </div>
+      </div>
       </footer>
     </body>
 </html>
