--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <div class="half-width">
               <img src="img/jubilee-thumbail.png" alt="jubilee thumbail photo" />
             </div>
-            <div class="half-width">
+            <div class="half-width project-description">
                 <h3>Jubilee Austen</h3>
                 <h4>HTML5 & CSS Website</h4>
                 <p>The final project in Phase 1 of Skillcrush “Break Into Tech” course. The task was to recreate a portfolio website for a web developer, using a Photoshop Design Comp. The aim of this project was to get familiar with Photoshop and learn about HTML and CSS.</p>
@@ -59,7 +59,7 @@
           <div class="half-width">
             <img src="img/rogue-pickings-thumbnail.png" alt="rogue pickings thumbail photo" />
           </div>
-          <div class="half-width">
+          <div class="half-width project-description">
             <h3>Rogue Pickings</h3>
             <h4>HTML & CSS from Photoshop Design Comp</h4>
             <p>The second project of the Skillcrush course. Designed a multi-page website with HTML and CSS all by myself, using Photoshop Design Comp.</p>
