added photos for all projectsand coded html and css for that, links to pages

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <!-- First -->
           <div id="first-project">
             <div class="half-width">
-              <img src="img/jubilee-thumbail.png" alt="jubilee thumbail photo" />
+              <a href="http://www.jjakobs.com/jubilee/" target="_BLANK"><img src="img/jubilee-thumbail.png" alt="jubilee thumbail photo"/></a>
             </div>
             <div class="half-width project-description">
                 <h3>Jubilee Austen</h3>
@@ -54,10 +54,10 @@
             </div>
         </div>
 
-        <!-- Second -->
+<!-- Second -->
         <div id="second-project">
           <div class="half-width">
-            <img src="img/rogue-pickings-thumbnail.png" alt="rogue pickings thumbail photo" />
+            <a href="http://www.jjakobs.com/rogue-pickings/" target="_BLANK"><img src="img/rogue-pickings-thumbnail.png" alt="rogue pickings thumbail photo" /></a>
           </div>
           <div class="half-width project-description">
             <h3>Rogue Pickings</h3>
@@ -65,8 +65,71 @@
             <p>The second project of the Skillcrush course. Designed a multi-page website with HTML and CSS all by myself, using Photoshop Design Comp.</p>
           </div>
         </div>
+
+<!-- THIRD -->
+      <div id="third-project">
+        <div class="half-width">
+          <a href="http://www.jjakobs.com/my-times/" target="_BLANK"><img src="img/my-times.png" alt="my times thumbail photo" /></a>
+        </div>
+        <div class="half-width project-description">
+          <h3>My Times</h3>
+          <h4>HTML, Box Model, CSS Display, and Flexbox</h4>
+          <p>Codecademy "Built Websites from Scratch" project about Box Model, CSS Display, and Flexbox - the basic tools for positioning elements on a web page.</p>
+        </div>
       </div>
-      </section>
+
+<!-- Forth -->
+      <div id="forth-project">
+        <div class="half-width">
+          <a href="http://www.jjakobs.com/my-times/" target="_BLANK"><img src="img/tea-cozy.png" alt="tea cozy thumbail photo" /></a>
+        </div>
+        <div class="half-width project-description">
+          <h3>Tea Cozy</h3>
+          <h4>HTML, Box Model, CSS Display, and Flexbox from Photoshop Design Comp</h4>
+          <p>Codecademy "Built Websites from Scratch" project about Box Model, CSS Display, and Flexbox Designed the site all by myself, using Photoshop Design Comp.</p>
+        </div>
+      </div>
+
+<!-- Fifth -->
+      <div id="fifth-project">
+        <div class="half-width">
+          <a href="http://www.jjakobs.com/secret-agent/" target="_BLANK"><img src="img/secret-agent.png" alt="secret agent thumbail photo" /></a>
+        </div>
+        <div class="half-width project-description">
+          <h3>Secret Agent Supply</h3>
+          <h4>HTML, CSS, Responsive Web Design, Media Quaries</h4>
+          <p>Codecademy "Built Websites from Scratch" project about HTML, CSS, and media queries to build the website that looks great on every device.</p>
+        </div>
+      </div>
+
+<!-- Sixt -->
+      <div id="sixt-project">
+        <div class="half-width">
+          <a href="http://www.jjakobs.com/optics/" target="_BLANK"><img src="img/optics.png" alt="optics thumbail photo" /></a>
+        </div>
+        <div class="half-width project-description">
+          <h3>Tortoiseshell Optics</h3>
+          <h4>HTML, CSS, Responsive Web Design</h4>
+          <p>Codecademy "Built Websites from Scratch" project about HTML, CSS and responsive design. Using Photoshop Design Comp, coded and designed website by myself.</p>
+        </div>
+      </div>
+
+<!-- seventh -->
+      <div id="seventh-project">
+        <div class="half-width">
+          <a href="http://www.jjakobs.com/colmar-academy/" target="_BLANK"><img src="img/colmar-academy.png" alt="optics thumbail photo" /></a>
+        </div>
+        <div class="half-width project-description">
+          <h3>Capstone Project: Colmar Academy</h3>
+          <h4>HTML, CSS, Responsive Web Design, Design</h4>
+          <p>Made typographic and color design choices for a fictional school, Colmar Academy, and built their responsive site from scratch.</p>
+        </div>
+      </div>
+
+
+
+    </div>
+  </section>
 
 
 <!-- About me -->
