added pages to the website

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 <!-- Forth -->
       <div id="forth-project">
         <div class="half-width">
-          <a href="http://www.jjakobs.com/my-times/" target="_BLANK"><img src="img/tea-cozy.png" alt="tea cozy thumbail photo" /></a>
+          <a href="http://www.jjakobs.com/tea-cozy/" target="_BLANK"><img src="img/tea-cozy.png" alt="tea cozy thumbail photo" /></a>
         </div>
         <div class="half-width project-description">
           <h3>Tea Cozy</h3>
@@ -115,7 +115,7 @@
       </div>
 
 <!-- seventh -->
-      <div id="seventh-project">
+    <!--  <div id="seventh-project">
         <div class="half-width">
           <a href="http://www.jjakobs.com/colmar-academy/" target="_BLANK"><img src="img/colmar-academy.png" alt="optics thumbail photo" /></a>
         </div>
@@ -124,7 +124,7 @@
           <h4>HTML, CSS, Responsive Web Design, Design</h4>
           <p>Made typographic and color design choices for a fictional school, Colmar Academy, and built their responsive site from scratch.</p>
         </div>
-      </div>
+      </div> -->
 
 
 
