added unplugged project to portfolio

--- a/index.html
+++ b/index.html
@@ -67,7 +67,19 @@
         </div>
 
 <!-- THIRD -->
-      <div id="third-project">
+        <div id="third-project">
+          <div class="half-width">
+            <a href="http://www.jjakobs.com/unplugged-retreat" target="_BLANK"><img src="img/unplugged-retreat.png" alt="optics thumbail photo" /></a>
+          </div>
+          <div class="half-width project-description">
+            <h3>Unplugged Retreat Site</h3>
+            <h4>HTML, CSS, Responsive Web Design, Flexbox, Media Queries</h4>
+            <p>Skillcrush 206 class - "CODING RESPONSIVE WEBSITES". Built responsive website with HTML and CSS, using media queries and flexbox.</p>
+          </div>
+        </div>
+
+<!-- Forth -->
+      <div id="forth-project">
         <div class="half-width">
           <a href="http://www.jjakobs.com/my-times/" target="_BLANK"><img src="img/my-times.png" alt="my times thumbail photo" /></a>
         </div>
@@ -78,8 +90,8 @@
         </div>
       </div>
 
-<!-- Forth -->
-      <div id="forth-project">
+<!-- Fifth -->
+      <div id="fifth-project">
         <div class="half-width">
           <a href="http://www.jjakobs.com/tea-cozy/" target="_BLANK"><img src="img/tea-cozy.png" alt="tea cozy thumbail photo" /></a>
         </div>
@@ -90,8 +102,8 @@
         </div>
       </div>
 
-<!-- Fifth -->
-      <div id="fifth-project">
+<!-- Sixt -->
+      <div id="sixt-project">
         <div class="half-width">
           <a href="http://www.jjakobs.com/secret-agent/" target="_BLANK"><img src="img/secret-agent.png" alt="secret agent thumbail photo" /></a>
         </div>
@@ -102,8 +114,8 @@
         </div>
       </div>
 
-<!-- Sixt -->
-      <div id="sixt-project">
+<!-- seventh -->
+      <div id="seventh-project">
         <div class="half-width">
           <a href="http://www.jjakobs.com/optics/" target="_BLANK"><img src="img/optics.png" alt="optics thumbail photo" /></a>
         </div>
@@ -113,20 +125,6 @@
           <p>Codecademy "Built Websites from Scratch" project about HTML, CSS and responsive design. Using Photoshop Design Comp, coded and designed website by myself.</p>
         </div>
       </div>
-
-<!-- seventh -->
-    <!--  <div id="seventh-project">
-        <div class="half-width">
-          <a href="http://www.jjakobs.com/colmar-academy/" target="_BLANK"><img src="img/colmar-academy.png" alt="optics thumbail photo" /></a>
-        </div>
-        <div class="half-width project-description">
-          <h3>Capstone Project: Colmar Academy</h3>
-          <h4>HTML, CSS, Responsive Web Design, Design</h4>
-          <p>Made typographic and color design choices for a fictional school, Colmar Academy, and built their responsive site from scratch.</p>
-        </div>
-      </div> -->
-
-
 
     </div>
   </section>
@@ -170,7 +168,7 @@
           <p>Riga, Latvia</p>
         </div>
         <div id="copyright" class="full-width">
-          <p>Copyright 2019 Jana Jakobs</p>
+          <p>©Copyright 2019 | Jana Jakobs</p>
         </div>
       </div>
       </footer>
