--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 <!-- THIRD -->
         <div id="third-project">
           <div class="half-width">
-            <a href="http://www.jjakobs.com/unplugged-retreat" target="_BLANK"><img src="img/unplugged-retreat.png" alt="optics thumbail photo" /></a>
+            <a href="http://www.jjakobs.com/unplugged-retreat" target="_BLANK"><img src="img/unplugged-retreat.png" alt="unpluggd retreat photo" /></a>
           </div>
           <div class="half-width project-description">
             <h3>Unplugged Retreat Site</h3>
