--- a/index.html
+++ b/index.html
@@ -1,176 +1,224 @@
 <!doctype html>
-<html lang="en">
+<html class="no-js" lang="eng">
 
-<!-- HEADER -->
-    <head>
-      <meta charset="utf-8" />
-      <title>Jana's Portfolio</title>
-      <link rel="stylesheet" type="text/css" href="css/main.css">
+<head>
+  <meta charset="utf-8">
+  <title>Jana's Portfolio</title>
+  <meta name="description" content="">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 
-      <link rel="stylesheet" type="text/css" href="css/normalize.css">
+  <link rel="manifest" href="site.webmanifest">
+  <link rel="apple-touch-icon" href="icon.png">
+  <!-- Place favicon.ico in the root directory -->
 
-      <link href="https://fonts.googleapis.com/css?family=Sacramento&display=swap" rel="stylesheet">
-      <link href="https://fonts.googleapis.com/css?family=Libre+Baskerville:400,400i,700&display=swap" rel="stylesheet">
-      <link href="https://fonts.googleapis.com/css?family=Merriweather:300,300i,400,700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="css/normalize.css">
+  <link rel="stylesheet" href="css/main.css">
 
-    </head>
+<!-- Google fonts -->
+  <link href="https://fonts.googleapis.com/css?family=Sacramento&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Libre+Baskerville:400,400i,700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Merriweather:300,300i,400,700&display=swap" rel="stylesheet">
 
-<!-- main part of the site -->
-    <body>
-<!-- HEADER -->
-    <header>
-      <div class="full-width">
-          <nav>
-            <ul>
-              <li><a href="#work">Work</a></li>
-              <li><a href="#about">About</a></li>
-              <li><a href="#contact">Contact</a></li>
-            </ul>
-          </nav>
-        <div id="greeting">
-          <h1>Hi you! <span>Jana</span> here.</h1>
-          <h2>I'm a web developer, designer,<br>  creative thinker and problem solver, based in Riga, Latvia.</h2>
+<!-- Font Awesome -->
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.11.2/css/all.css" integrity="sha384-KA6wR/X5RY4zFAHpv/CnoG2UW1uogYfdnP67Uv7eULvTveboZJg0qUpmJZb5VqzN" crossorigin="anonymous">
+
+  <meta name="theme-color" content="#fafafa">
+</head>
+
+<body>
+  <!--[if IE]>
+    <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="https://browsehappy.com/">upgrade your browser</a> to improve your experience and security.</p>
+  <![endif]-->
+
+  <!-- HEADER -->
+      <header>
+        <div class="content-wrapper">
+          <section class="hero-area">
+            <nav>
+              <ul>
+                <li><a href="#work">Work</a></li>
+                <li><a href="#about">About</a></li>
+                <li><a href="#contact">Contact</a></li>
+              </ul>
+            </nav>
+            <div id="greeting">
+              <h1>Hi you! <span>Jana</span> here.</h1>
+              <h2>I'm a web developer, designer,  creative problem solver, based in Riga, Latvia.</h2>
+            </div>
+          </section>
         </div>
-      </div>
-    </header>
+      </header>
 
 <!-- MAIN -->
+      <main>
 
-<!---work -->
-      <section id="work">
-        <div class="full-width">
+<!---WORK -->
+      <section class="work">
+        <div class="content-wrapper">
           <h2>My Portfolio</h2>
 
-        <!-- First -->
-          <div id="first-project">
-            <div class="half-width">
-              <a href="http://www.jjakobs.com/jubilee/" target="_BLANK"><img src="img/jubilee-thumbail.png" alt="jubilee thumbail photo"/></a>
-            </div>
-            <div class="half-width project-description">
+<!-- Projects -->
+          <div class="projects">
+<!-- first -->
+            <article>
+              <figure class="project-photo">
+                <a href="http://www.jjakobs.com/jubilee/" target="_BLANK"><img src="img/jubilee.png" alt="jubilee thumbail photo"/></a>
+              </figure>
+              <div class="project-description">
                 <h3>Jubilee Austen</h3>
                 <h4>HTML5 & CSS Website</h4>
-                <p>The final project in Phase 1 of Skillcrush “Break Into Tech” course. The task was to recreate a portfolio website for a web developer, using a Photoshop Design Comp. The aim of this project was to get familiar with Photoshop and learn about HTML and CSS.</p>
+                <p>The final project of Phase 1 of Skillcrush “Break Into Tech” course. Recreating a portfolio website, using a Photoshop Design Comp.</p>
+              </div>
+            </article>
 
-            </div>
-        </div>
+  <!-- Second -->
+            <article>
+              <figure class="project-photo">
+                <a href="http://www.jjakobs.com/rogue-pickings/" target="_BLANK"><img src="img/rogue-pickings.png" alt="rogue pickings thumbail photo" /></a>
+              </figure>
+              <div class="project-description">
+                <h3>Rogue Pickings</h3>
+                <h4>HTML & CSS from Photoshop Design Comp</h4>
+                <p>The second project of the Skillcrush course. Designed a multi-page website with HTML and CSS all by myself, using Photoshop Design Comp.</p>
+              </div>
+            </article>
 
-<!-- Second -->
-        <div id="second-project">
-          <div class="half-width">
-            <a href="http://www.jjakobs.com/rogue-pickings/" target="_BLANK"><img src="img/rogue-pickings-thumbnail.png" alt="rogue pickings thumbail photo" /></a>
-          </div>
-          <div class="half-width project-description">
-            <h3>Rogue Pickings</h3>
-            <h4>HTML & CSS from Photoshop Design Comp</h4>
-            <p>The second project of the Skillcrush course. Designed a multi-page website with HTML and CSS all by myself, using Photoshop Design Comp.</p>
-          </div>
-        </div>
+  <!-- THIRD -->
+            <article>
+              <figure class="project-photo">
+                <a href="http://www.jjakobs.com/unplugged-retreat" target="_BLANK"><img src="img/unplugged-retreat.png" alt="unpluggd retreat photo" /></a>
+              </figure>
+              <div class="project-description">
+                <h3>Unplugged Retreat Site</h3>
+                <h4>HTML, CSS, Responsive Web Design, Flexbox, Media Queries</h4>
+                <p>Skillcrush 206 class - "Coding Responsive Websites". Built a responsive website with HTML and CSS, using media queries and the flexbox.</p>
+              </div>
+            </article>
 
-<!-- THIRD -->
-        <div id="third-project">
-          <div class="half-width">
-            <a href="http://www.jjakobs.com/unplugged-retreat" target="_BLANK"><img src="img/unplugged-retreat.png" alt="unpluggd retreat photo" /></a>
-          </div>
-          <div class="half-width project-description">
-            <h3>Unplugged Retreat Site</h3>
-            <h4>HTML, CSS, Responsive Web Design, Flexbox, Media Queries</h4>
-            <p>Skillcrush 206 class - "CODING RESPONSIVE WEBSITES". Built responsive website with HTML and CSS, using media queries and flexbox.</p>
-          </div>
-        </div>
+  <!-- Forth -->
+            <article>
+              <figure class="project-photo">
+                <a href="http://www.jjakobs.com/my-times/" target="_BLANK"><img src="img/my-times.png" alt="my times thumbail photo" /></a>
+              </figure>
+              <div class="project-description">
+                <h3>My Times</h3>
+                <h4>HTML, Box Model, CSS Display, and Flexbox</h4>
+                <p>Codecademy "Built Websites from Scratch" project about Box Model, CSS Display, and Flexbox - the basic tools for positioning elements on a web page.</p>
+              </div>
+            </article>
 
-<!-- Forth -->
-      <div id="forth-project">
-        <div class="half-width">
-          <a href="http://www.jjakobs.com/my-times/" target="_BLANK"><img src="img/my-times.png" alt="my times thumbail photo" /></a>
-        </div>
-        <div class="half-width project-description">
-          <h3>My Times</h3>
-          <h4>HTML, Box Model, CSS Display, and Flexbox</h4>
-          <p>Codecademy "Built Websites from Scratch" project about Box Model, CSS Display, and Flexbox - the basic tools for positioning elements on a web page.</p>
-        </div>
-      </div>
+  <!-- Fifth -->
+            <article>
+              <figure class="project-photo">
+                <a href="http://www.jjakobs.com/tea-cozy/" target="_BLANK"><img src="img/tea-cozy.png" alt="tea cozy thumbail photo" /></a>
+              </figure>
+              <div class="project-description">
+                <h3>Tea Cozy</h3>
+                <h4>HTML, Box Model, CSS Display, and Flexbox from Photoshop Design Comp</h4>
+                <p>Codecademy "Built Websites from Scratch" project about Box Model, CSS Display, and Flexbox Designed the site all by myself, using Photoshop Design Comp.</p>
+              </div>
+            </article>
 
-<!-- Fifth -->
-      <div id="fifth-project">
-        <div class="half-width">
-          <a href="http://www.jjakobs.com/tea-cozy/" target="_BLANK"><img src="img/tea-cozy.png" alt="tea cozy thumbail photo" /></a>
-        </div>
-        <div class="half-width project-description">
-          <h3>Tea Cozy</h3>
-          <h4>HTML, Box Model, CSS Display, and Flexbox from Photoshop Design Comp</h4>
-          <p>Codecademy "Built Websites from Scratch" project about Box Model, CSS Display, and Flexbox Designed the site all by myself, using Photoshop Design Comp.</p>
-        </div>
-      </div>
+  <!-- Sixt -->
+            <article>
+              <figure class="project-photo">
+                <a href="http://www.jjakobs.com/secret-agent/" target="_BLANK"><img src="img/secret-agent.png" alt="secret agent thumbail photo" /></a>
+              </figure>
+              <div class="project-description">
+                <h3>Secret Agent Supply</h3>
+                <h4>HTML, CSS, Responsive Web Design, Media Quaries</h4>
+                <p>Codecademy "Built Websites from Scratch" project about HTML, CSS, and media queries to build the website that looks great on every device.</p>
+              </div>
+            </article>
 
-<!-- Sixt -->
-      <div id="sixt-project">
-        <div class="half-width">
-          <a href="http://www.jjakobs.com/secret-agent/" target="_BLANK"><img src="img/secret-agent.png" alt="secret agent thumbail photo" /></a>
-        </div>
-        <div class="half-width project-description">
-          <h3>Secret Agent Supply</h3>
-          <h4>HTML, CSS, Responsive Web Design, Media Quaries</h4>
-          <p>Codecademy "Built Websites from Scratch" project about HTML, CSS, and media queries to build the website that looks great on every device.</p>
-        </div>
-      </div>
+  <!-- seventh -->
+            <article>
+              <figure class="project-photo">
+                <a href="http://www.jjakobs.com/optics/" target="_BLANK"><img src="img/optics.png" alt="optics thumbail photo" /></a>
+              </figure>
+              <div class="project-description">
+                <h3>Tortoiseshell Optics</h3>
+                <h4>HTML, CSS, Responsive Web Design</h4>
+                <p>Codecademy "Built Websites from Scratch" project about HTML, CSS and responsive design. Using Photoshop Design Comp, coded and designed website by myself.</p>
+              </div>
+            </article>
 
-<!-- seventh -->
-      <div id="seventh-project">
-        <div class="half-width">
-          <a href="http://www.jjakobs.com/optics/" target="_BLANK"><img src="img/optics.png" alt="optics thumbail photo" /></a>
-        </div>
-        <div class="half-width project-description">
-          <h3>Tortoiseshell Optics</h3>
-          <h4>HTML, CSS, Responsive Web Design</h4>
-          <p>Codecademy "Built Websites from Scratch" project about HTML, CSS and responsive design. Using Photoshop Design Comp, coded and designed website by myself.</p>
-        </div>
-      </div>
-
-    </div>
-  </section>
+        </div> <!--- Projects END-->
+      </div> <!-- content-wrapper END -->
+    </section> <!-- section work END -->
 
 
 <!-- About me -->
-      <section id="about" >
-        <div class="full-width">
-          <h2>About me</h2>
-          <div class="half-width">
+    <section class="about">
+      <div class="content-wrapper">
+        <h2>About me</h2>
+        <article>
+          <figure>
             <img src="img/about-me-picture.jpg" alt="about me photo"/>
-          </div>
-          <div class="half-width">
+          </figure>
+          <div class="about-info">
             <h3>I'm passionate about tech and art!</h3>
             <p>My name is Jana (but you actually should say Yana). I'm a Skillcrush student, a tecky in a making. I'm a problem solver and love logical riddles, which is basically my job as a developer. <br>I'm actually coming from an art background - I have a Bachelor's degree in Art History and Theory, so if you also want to talk art -let's! What can be better than mixing different fields of knowledge.</p>
           </div>
-        </div>
-      </section>
+        </article>
+      </div> <!-- content-wrapper END -->
+    </section> <!-- about section END -->
+  </main>
 
 <!-- footer -->
-      <footer id="contact">
-        <div class="full-width">
+    <footer>
+      <div class="content-wrapper">
+        <div class="footer-content">
           <h2>Let's Connect</h2>
+          <address class="hire">
+            <h3>Hire me</h3>
+            <p>000000000000</p>
+            <a href="mailto:jana@jjakobs.com">jana@jjakobs.com</a>
+          </address>
 
-        <div id="hire" class="third-width">
-          <h3>Hire me</h3>
-          <p>000000000000</p>
-          <a href="mailto:jana@jjakobs.com">jana@jjakobs.com</a>
-        </div>
-        <div id="connect" class="third-width">
-          <h3>Follow me</h3>
-          <ul>
-            <li><a href="https://www.facebook.com/jakobs.jana"><img src="img/facebook.png" alt="facebook icon" /></a></li>
-            <li><a href="https://github.com/Jana993"><img src="img/github.png" alt="github icon" /></a></li>
-            <li><a href="https://www.linkedin.com/in/jjakobs/"><img src="img/linkedin.png" alt="linkedin icon" /></a></li>
-          </ul>
-        </div>
+          <div class="meet">
+            <h3>Meet Me</h3>
+            <p>Riga, Latvia</p>
+          </div> <!-- meet END -->
 
-        <div id="meet" class="third-width">
-          <h3>Meet Me</h3>
-          <p>Riga, Latvia</p>
-        </div>
-        <div id="copyright" class="full-width">
-          <p>©Copyright 2019 | Jana Jakobs</p>
-        </div>
-      </div>
-      </footer>
-    </body>
+          <div class="social">
+            <h3>Follow me</h3>
+            <div class ="social-icons">
+              <p>
+                <a href="https://www.facebook.com/jakobs.jana" target="_blank"><i class="fab fa-facebook-f"></i></a>
+              </p>
+              <p>
+                <a href="https://github.com/Jana993" target="_blank"><i class="fab fa-github"></i></a>
+              </p>
+              <p>
+                <a href="https://www.linkedin.com/in/jjakobs/" target="_blank"><i class="fab fa-linkedin-in"></i></a>
+              </p>
+            </div> <!-- social icons END -->
+          </div> <!-- social END -->
+
+
+          <div class="copyright">
+            <p>©Copyright 2019 | Jana Jakobs</p>
+          </div> <!-- copyright END -->
+        </div> <!-- footer-content END -->
+      </div> <!-- content-wrapper END -->
+    </footer>
+
+
+  <!-- Add your site or application content here -->
+
+  <script src="js/vendor/modernizr-3.7.1.min.js"></script>
+  <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+  <script>window.jQuery || document.write('<script src="js/vendor/jquery-3.4.1.min.js"><\/script>')</script>
+  <script src="js/plugins.js"></script>
+  <script src="js/main.js"></script>
+
+  <!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
+  <script>
+    window.ga = function () { ga.q.push(arguments) }; ga.q = []; ga.l = +new Date;
+    ga('create', 'UA-XXXXX-Y', 'auto'); ga('set','transport','beacon'); ga('send', 'pageview')
+  </script>
+  <script src="https://www.google-analytics.com/analytics.js" async></script>
+</body>
+
 </html>
